# kpi-platform

./: README.md  docker-compose.yml
backend/: Dockerfile  kpi.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: af7d82a32749_initial_migration.py
backend/app/: db.py  main.py  models.py  schemas.py  seed.py  settings.py
backend/app/routers/: alerts.py  ingestion.py  integrations.py  kpis.py
backend/app/services/: alert_engine.py  kpi_engine.py  normalize.py
backend/app/services/connectors/: ga4.py  hubspot.py  stripe.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: KpiCard.tsx  KpiChart.tsx
frontend/src/pages/: Dashboard.tsx  Events.tsx  Integrations.tsx
