[project]
name = "kpi-platform-backend"
version = "0.1.0"
description = "Backend for KPI Intelligence Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "alembic",
    "pydantic-settings",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "httpx",
]

[tool.setuptools]
packages = ["app"]
